--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,42 @@ body {
   overflow-x: hidden;
   background-color: #0a0a0a;
 }
-/* */
+/* glitch effects */
+.glitch-container {
+  position: relative;
+}
+
+.glitch {
+ 
+  font-weight: bold;
+
+  position: relative;
+  display: inline-block;
+}
+
+.glitch::before,
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: none;
+ 
+  pointer-events: none;
+}
+
+.glitch::before {
+  text-shadow: -2px 0 cyan, 2px 0 red;
+}
+
+.glitch::after {
+  text-shadow: 2px 0 red, -2px 0 cyan;
+}
+
+
+/* static effects */
 @keyframes tv-static {
   0% {
     background-position: 0 0;
@@ -57,7 +92,7 @@ body {
   animation: tv-static 0.5s steps(20) infinite;
 }
 
-/* */
+/* google fonts */
 
 :root {
   --font-sixtyfour: "Sixtyfour", serif;
@@ -72,7 +107,7 @@ body {
     "BLED" 0,
     "SCAN" 0;
 }
-/* */
+
 /* Typewriter Effect */
 @keyframes typing {
   0% {
