--- a/styles/card.css
+++ b/styles/card.css
@@ -1,11 +1,7 @@
-.sidebar {
+.card{
+  width: 400px;
   border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   background: rgb(0,0,0);
   background: linear-gradient(142deg, rgba(0,0,0,1) 0%, rgba(53,51,49,1) 49%, rgba(0,0,0,1) 100%);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.sidebar a:hover {
-  color: #e4e3e3 !important;
-  
 }
