--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -14,7 +14,7 @@
 }
   
 .nav-item :hover{
-  color: #bcb9b9  
+  color: #dad8d8  
 }
       
 .nav-link {
@@ -22,16 +22,16 @@
 }
 
 .nav-link :hover {
-  color: #6c6b6b 
+  color: #dfdede 
 }
       
 li a {
-  color: #a09e9e;  
+  color: #edebeb;  
   text-decoration: none;
 }
       
 li a:hover {
-  color: #a3a1a1;  
+  color: #e0dede;  
 }
   
 li {   
@@ -39,7 +39,7 @@ li {
 }
       
 li :hover {
-  color: #b6b5b4;     
+  color: #f8f5f2;     
 }
 
 .btn-hover {
@@ -134,7 +134,7 @@ li :hover {
   border-radius: 10px;
   min-width: 150px;
 }
-  
+ 
 .dropdown:hover .dropdown-menu {
   display: block;
 }
@@ -142,8 +142,12 @@ li :hover {
 .dropdown-menu a {
   display: block;
   padding: 10px;
-  color: #b6b7b8;
+  color: #a6a7a7;
   text-decoration: none; 
+}
+
+.dropdown-menu a:hover {
+  color: #dad8d8 !important;  
 }
     
 /* Profile Image */
@@ -152,11 +156,7 @@ li :hover {
   border: 2px solid transparent;
   transition: border-color 0.3s ease-in-out;
 }
-  
-.rounded-circle:hover {
-  border-color: #007bff;
-}
-  
+   
 /* Responsive Design */
 @media (max-width: 992px) {
 .d-flex {
