--- a/styles/card.css
+++ b/styles/card.css
@@ -5,3 +5,24 @@
   background: rgb(0,0,0);
   background: linear-gradient(142deg, rgba(0,0,0,1) 0%, rgba(53,51,49,1) 49%, rgba(0,0,0,1) 100%);
 }
+
+.card-link {
+  text-decoration: none;
+}
+
+.toast-container {
+  background: rgb(0,0,0);
+  background: linear-gradient(142deg, rgba(0,0,0,1) 0%, rgba(53,51,49,1) 49%, rgba(0,0,0,1) 100%);
+}
+
+.toast-header {
+  background: rgb(0,0,0);
+  background: linear-gradient(142deg, rgba(0,0,0,1) 0%, rgba(53,51,49,1) 49%, rgba(0,0,0,1) 100%);
+  color: #fff;
+}
+
+.toast-body {
+  background: rgb(0,0,0);
+  background: linear-gradient(142deg, rgba(0,0,0,1) 0%, rgba(53,51,49,1) 49%, rgba(0,0,0,1) 100%);
+  color: #fff;
+}
