added tab component for media player

--- a/styles/card.css
+++ b/styles/card.css
@@ -26,3 +26,10 @@
   background: linear-gradient(142deg, rgba(0,0,0,1) 0%, rgba(53,51,49,1) 49%, rgba(0,0,0,1) 100%);
   color: #fff;
 }
+
+.shorts {
+  width: 200px;
+  border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+ 
+}
