--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -81,7 +81,7 @@ li :hover {
 .search-container {
   display: flex;
   align-items: center;
-  background-color: #1c1c1c;
+  background-color: #434343;
   border: 1px solid #262626;
   border-radius: 30px;
   padding: 6px 12px;
