--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -85,33 +85,34 @@ li :hover {
   border: 1px solid #262626;
   border-radius: 30px;
   padding: 6px 12px;
-  width: 300px;
+  min-width: 60%;
   position: relative;
   
 }
 
 .search-icon {
   color: #e2e3e3;
-  margin-right: 8px;
+  margin-right: 1px;
 }
 
 .search-input {
   border: none;
   outline: none; 
-  width: 100%;
+  background-color: #cdcccc;
   background: transparent;
   
 }
 
 .search-input::placeholder {
-  color: #d0d2d2;
+  color: #e1e0e0;
 }
 
 .search-input:focus,
 .search-container:focus-within {
-  border-color: #696a6a; 
+  box-shadow: none;
   outline: none; 
-  box-shadow: 0 0 4px rgba(0, 123, 255, 0.25); 
+  background-color: #2c2c2c;
+  
 }
 
 .dropdown {
@@ -119,7 +120,7 @@ li :hover {
 }
 
 .dropdown-item {
-  color: #f9f8f8;
+  color: #1f1f1f;
 } 
   
 .dropdown-toggle {
