--- a/styles/globals.css
+++ b/styles/globals.css
@@ -112,37 +112,42 @@ body {
   font-family: var(--font-michroma), sans-serif;
 }
 
-
-/* Typewriter Effect */
 @keyframes typing {
   0% {
     width: 0;
-    border-right-color: transparent; 
+    border-right-color: white;
+  }
+  50% {
+    width: 100%;
+    border-right-color: white;
   }
   100% {
-    width: 100%;
-    border-right-color: transparent; 
+    width: 0;
+    border-right-color: white;
   }
 }
 
 @keyframes blink {
+  0%, 100% {
+    border-right-color: transparent;
+  }
   50% {
-    border-right-color: white; 
+    border-right-color: white;
   }
 }
 
 .typewriter {
   font-weight: bold;
-  position: relative;
   display: inline-block;
-  overflow: hidden; 
-  white-space: nowrap; 
-  border-right: 4px solid transparent; 
-  animation: typing 2s steps(12) 1s forwards, blink 0.75s step-end infinite;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 4px solid white;
+  animation: typing 4s steps(10) infinite, blink 0.75s  infinite;
 }
+
 /* social icons */
 .social-icons {
-  color: #f74e4e;
+  color: #fe4545;
   font-size: 1.5rem;
   margin-right: 1rem;
 }
